<resources>
    <string name="app_name">Guess Game</string>
    <string name="generate">Generate</string>
    <string name="guess">Guess</string>
    <string name="check">Check</string>
    <string name="guess_a_number_between_1_to_50">Guess a number between 1 to 50</string>
    <string name="enter_the_guessed_number_below">Enter the guessed number below +.+</string>
    <string name="todo">TODO</string>
</resources>
