<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="476dp"
        android:layout_marginEnd="116dp"
        android:layout_marginLeft="117dp"
        android:layout_marginRight="116dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/guess_a_number_between_1_to_50"
        android:textColor="?android:attr/colorForeground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="417dp"
        android:layout_marginEnd="18dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="25dp"
        android:fontFamily="serif-monospace"
        android:text="@string/enter_the_guessed_number_below"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="342dp"
        android:layout_marginEnd="85dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="85dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/guess"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="0" />

    <Button
        android:id="@+id/gen"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="280dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="14dp"
        android:onClick="genFun"
        android:text="@string/generate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/check"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess" />

    <Button
        android:id="@+id/check"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="280dp"
        android:layout_marginEnd="86dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="86dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="14dp"
        android:onClick="checkFun"
        android:text="@string/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gen"
        app:layout_constraintTop_toBottomOf="@+id/guess" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginRight="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gen"
        app:srcCompat="@drawable/main"
        android:contentDescription="@string/todo" />

</android.support.constraint.ConstraintLayout>